<resources>
    <string name="app_name">Nesti_mes_recettes</string>
    <string name="easyBtn">Facile à faire</string>
    <string name="noGlutenBtn">Sans gluten</string>
    <string name="saisonBtn">c\'est de saison</string>
    <string name="traditionBtn">Traditionelles</string>
    <string name="choseLabel">Choisissez une catégorie</string>
    <string name="recette">Rechercher une recette</string>

    <string name="courses">Liste des courses</string>

    <string name="menu_presentation">Présentation</string>
    <string name="menu_contact">Contact</string>

    <string name="menu_project">Project</string>

    <string name="menu_list">List</string>

    <string name="menu_team">Team</string>

    <string name="menu_search">search</string>

    <string name="gluten">Gluten</string>
    <string name="sassion">Sassion</string>
    <string name="traditionel">Traditionel</string>


</resources>